--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <main>
 	  <p id='content'></p>
+	<script type="text/javascript" charset="utf-8" src="mainscript.js"></script>
 	</main>
   </body>
 </html>
