--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <title>JQuery Test Page</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="main-style.css">
+	<
   </head>
   <body>
-    <main>
-	  <p>I can't remember any pangrams.</p>
+    <main id="page">
+	  <h1 id="header">List</h1>
+	  <ul>
+	    <li id="one" class="hot"><em>fresh</em> figs</li>
+		<li id="two" class="hot">pine nuts</li>
+		<li id="three" class="hot">honey</li>
+		<li id="four">balsamic vinegar</li>
+	  </ul>
 	</main>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script charset="utf-8" src="main-script.js"></script>
   </body>
 </html>
