--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-	<title>Hello React</title>
-	<script src="build/react.js"></script>
-	<script src="build/react-dom.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-  </head>
-  <body>
-    <div id="example"></div>
-	<script type="text/babel">
-	  var HelloWorld = React.createClass({
-	    render: function() {
-		 return (
-		   <p> Hello, <input type="text" placeholder="your name here" />!
-		   It is {this.props.date.toTimeString()}
-		   </p>
-		 );
-		}
-	  });
-	  
-	  setInterval(function() {
-	    ReactDOM.render(
-		  <HelloWorld date={new Date()} />,
-		  document.getElementById('example')
-		);
-	  }, 500);
-	</script>
-  </body>
+<head>
+<script src="https://code.jquery.com/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <title>React Test</title>
+</head>
+<body>
+  <div class="well clearfix">
+  <textarea class="form-control"></textarea><br/>
+  <button class="btn btn-primary pull-right">Tweet</button>
+  </div>
+  
+</body>
 </html>
