--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://code.jquery.com/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <meta charset="utf-8">
   <title>React Test</title>
 </head>
 <body>
+<script>
+  $(function() {
+    $("button").prop("disabled", true);
+	
+	$("textarea").on("input", function() {
+	  if ($(this).val().length > 0) {
+	    $("button").prop("disabled", false);
+	  } else {
+	    $("button").prop("disabled", true);
+	  }
+	});
+  });
+</script>
   <div class="well clearfix">
   <textarea class="form-control"></textarea><br/>
   <button class="btn btn-primary pull-right">Tweet</button>
