--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8" />
-	<title></title>
+	<title>Ajax Test Page</title>
 	
 	<link rel="stylesheet" href="/css/main-style.css">
   </head>
   <body>
     <main>
+	<h1>Content:</h1>
+	
 	  <section class="content">
-	    <p>Lorem ipsum dolor sit amet.</p>
+	  <h2>HTML inserted into page via ajax:</h2>  
+	  <p>HTML file content goes here</p>
 	  </section>
+	  
+	  <section class="content">
+	  <h2>XML inserted into page via ajax:</h2>
+	  <p>XML file content goes here
+	  </section>
+	  
+	  <section class="content">
+	  <h2>JSON inserted into page via ajax:</h2>
+	  <p>JSON content goes here</p>
+	  </section>
+	  
 	</main>
   <script src="/javascript/main-script.js"></script>
   </body>
