added button element that calls xml event listener

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<div class="flex-item" >
 	<h3>XML</h3>
 	<p id="xml">Lorem ipsum dolor sit amet.</p>
+	<button id="addXmlBtn">Click to send ajax request</button>
 	</div>
 	
 	<div class="flex-item" >
