--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<div class="flex-item" >
 	<h3>XML</h3>
-	<p id="xml">Lorem ipsum dolor sit amet.</p>
+	<p id="xml"></p>
 	<button id="addXmlBtn">Click to send ajax request</button>
 	</div>
 	
