--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<div class="flex-item" >
 	<h3>JSON</h3>
 	<p id="json">Lorem ipsum dolor sit amet.</p>
+	<button id="addJsonBtn">Click to send ajax request</button>
 	</div>
 	
    </div>
