removed xml eventlistener

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<div class="flex-item" >
 	<h3>XML</h3>
 	<p id="xml"></p>
-	<button id="addXmlBtn">Click to send ajax request</button>
 	</div>
 	
 	<div class="flex-item" >
@@ -29,6 +28,6 @@
 	</div>
 	
    </div>
-   <script type="text/javascript" src="javascript/main-script.js" charset="UTF-8"></script>
+   <script type="text/javascript" src="/javascript/main-script.js" charset="UTF-8"></script>
   </body>
 </html>
