--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<div class="flex-item" >
 	<h3>JSON</h3>
-	<p id="json">Lorem ipsum dolor sit amet.</p>
+	<p id="json"></p>
 	<button id="addJsonBtn">Click to send ajax request</button>
 	</div>
 	
