--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="flex-item">
       <h3>XML</h3>
       <p id="xml"></p>
+	  <button id="addXmlBtn">Click to send ajax request</button>
     </div>
 
     <div class="flex-item">
