--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
       <p id="json"></p>
       <button id="addJsonBtn">Click to send ajax request</button>
     </div>
+	
+	<div class="flex-item">
+      <h3>JSON Dropdown List</h3>
+      <p id="json-list">
+	    <select id="first-choice">
+		  <option selected value="base">Please Select</option>
+		  <option value="beverages">Beverages</option>
+		  <option value="snacks">Snacks</option>
+		</select>
+		<select id="second-choice">
+		  <option>Please choose from above</option>
+		</select>
+	  </p>
+    </div>
 
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script type="text/javascript" src="/javascript/main-script.js" charset="UTF-8"></script>
 </body>
 
